# sdl_sph

./: CMakeLists.txt  build.sh
assets/: particles.comp.msl  particles.comp.spv  particles.frag.msl  particles.frag.spv  particles.slang  particles.vert.msl  particles.vert.spv
include/: render.h
src/: main.c  render.c  shader_utils.c  shader_utils.h
